--- a/NSI-AD24 Digitizer Tool.csproj
+++ b/NSI-AD24 Digitizer Tool.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="SimpleTCP" Version="1.0.24" />
+    <PackageReference Include="System.IO.Ports" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
